--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/bottom-tabs": "^7.0.4",
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/native-stack": "^7.0.3",
+    "@tanstack/react-query": "^5.60.5",
     "expo": "~52.0.7",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
